--- a/create_poll.html
+++ b/create_poll.html
@@ -97,7 +97,7 @@
 
             const token = localStorage.getItem('token');
 
-            const response = await fetch('https://web-production-085e.up.railway.app/api/polls/', {
+            const response = await fetch('https://polling-api-project.vercel.app//api/polls/', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
@@ -136,7 +136,7 @@
         const token = localStorage.getItem("token");
 
         if (token) {
-        fetch("https://web-production-085e.up.railway.app/api/auth/user/", {
+        fetch("https://polling-api-project.vercel.app//api/auth/user/", {
             method: "GET",
             headers: {
             "Authorization": "Token " + token,
