--- a/create_poll.html
+++ b/create_poll.html
@@ -97,7 +97,7 @@
 
             const token = localStorage.getItem('token');
 
-            const response = await fetch('https://polling-api-project.vercel.app//api/polls/', {
+            const response = await fetch('https://polling-api-project.vercel.app/api/polls/', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
@@ -124,8 +124,6 @@
             addOption();
         }
     </script>
-
-
     <script>
         function logout() {
             localStorage.removeItem("token");
@@ -136,7 +134,7 @@
         const token = localStorage.getItem("token");
 
         if (token) {
-        fetch("https://polling-api-project.vercel.app//api/auth/user/", {
+        fetch("https://polling-api-project.vercel.app/api/auth/user/", {
             method: "GET",
             headers: {
             "Authorization": "Token " + token,
