--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
         const token = localStorage.getItem("token");
 
         if (token) {
-        fetch("https://polling-api-project.vercel.app//api/auth/user/", {
+        fetch("https://polling-api-project.vercel.app/api/auth/user/", {
             method: "GET",
             headers: {
             "Authorization": "Token " + token,
