--- a/login.html
+++ b/login.html
@@ -44,7 +44,7 @@
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
-      const response = await fetch("https://polling-api-project.vercel.app//api/auth/login/", {
+      const response = await fetch("https://polling-api-project.vercel.app/api/auth/login/", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
