--- a/poll_detail.html
+++ b/poll_detail.html
@@ -43,7 +43,7 @@
                 <div class="col-12 d-flex justify-content-end">
                     <button class="btn my-button rounded px-2 py-0" onclick="location.href='poll_list.html'">Back</button>
                 </div>
-                <div class="col-md-6 bg-light px-4 py-2 rounded">
+                <div id="poll-list" class="col-md-6 bg-light px-4 py-2 rounded">
                 
                 </div>
             </div>
