--- a/login.html
+++ b/login.html
@@ -29,6 +29,11 @@
                   </div>
                   <button type="submit" class="my-button btn rounded col-12">Login</button>
                 </form>
+                <div>
+                  <p class="text-center mt-3">
+                    Non hai un account? <a href="reg.html">Registrati</a>
+                  </p>
+                </div>
                 <p id="result"></p>
               </div>
           </div>
