--- a/login.html
+++ b/login.html
@@ -1,47 +1,51 @@
 <!DOCTYPE html>
 <html lang="it">
-<head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <link rel="stylesheet" href="css/style.css" />
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-</head>
-<body>
-  <main>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="description"
+          content="Login page for accessing your account securely.">
+    <meta name="keywords"
+          content="login, authentication, user, access, account">
+    <title>Login</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+  </head>
+  <body>
+    <main>
       <div class="container mt-4">
-          <div class="row justify-content-center">
-              <div class="col-md-6 bg-light px-4 py-2 rounded justify-content-center">
-                <h2 class="login-text col-12">Login</h2>
-                <form id="login-form" class="d-flex flex-column justify-content-center" method="post">
-                  <div>
-                    <div class="mb-3 row justify-content-center">
-                      <label for="username" class="col-sm-2 col-form-label">Username</label>
-                      <div class="col-sm-6">
-                        <input type="text" class="form-control" id="username" name="username">
-                      </div>
-                    </div>
-                    <div class="mb-3 row justify-content-center">
-                      <label for="password" class="col-sm-2 col-form-label">Password</label>
-                      <div class="col-sm-6">
-                        <input type="password" class="form-control" id="password" name="password">
-                      </div>
-                    </div>
+        <div class="row justify-content-center">
+          <div class="col-md-6 bg-light px-4 py-2 rounded justify-content-center">
+            <h2 class="login-text col-12">Login</h2>
+            <form id="login-form"
+                  class="d-flex flex-column justify-content-center align-items-center"
+                  method="post">
+              <div>
+                <div class="mb-3 row justify-content-center">
+                  <label for="username" class="col-4 col-form-label px-0 text-center">Username</label>
+                  <div class="col-8 px-0">
+                    <input type="text" class="form-control" id="username" name="username">
                   </div>
-                  <button type="submit" class="my-button btn rounded col-12">Login</button>
-                </form>
-                <div>
-                  <p class="text-center mt-3">
-                    Non hai un account? <a href="reg.html">Registrati</a>
-                  </p>
                 </div>
-                <p id="result"></p>
+                <div class="mb-3 row justify-content-center">
+                  <label for="password" class="col-4 col-form-label px-0 text-center">Password</label>
+                  <div class="col-8 px-0">
+                    <input type="password" class="form-control" id="password" name="password">
+                  </div>
+                </div>
               </div>
+              <button type="submit" class="my-button btn rounded col-9">Login</button>
+            </form>
+            <div>
+              <p class="text-center mt-3">
+                Not registered yet? <a class="my-button btn rounded px-2 py-0" href="reg.html">Signup</a>
+              </p>
+            </div>
+            <p id="result"></p>
           </div>
+        </div>
       </div>
-  </main>
-  
-
-  <script>
+    </main>
+    <script>
     const form = document.getElementById("login-form");
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
@@ -49,7 +53,7 @@
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
-      const response = await fetch("https://polling-api-project.vercel.app/api/auth/login/", {
+      const response = await fetch("http://localhost:8000/api/auth/login/", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
@@ -70,7 +74,7 @@
         result.innerText = `Errore: ${JSON.stringify(error)}`;
       }
     });
-  </script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-</body>
+    </script>
+    <script src="js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
