--- a/reg.html
+++ b/reg.html
@@ -12,7 +12,7 @@
         <main>
             <div class="container mt-4">
                 <div class="row justify-content-center">
-                    <div class="col-md-6 bg-light px-4 py-2 rounded justify-content-center">
+                    <div class="col-8 bg-light px-4 py-2 rounded justify-content-center">
                         <h2 class="login-text col-12">Registration</h2>
                         <form id="login-form"
                               class="d-flex flex-column justify-content-center"
@@ -54,6 +54,11 @@
                                         <input type="text" class="form-control" id="last_name" name="last_name">
                                     </div>
                                 </div>
+                                <div class="mb-3 row justify-content-center">
+                                    <label for="categories">Select the categories of your interest (max 3):</label>
+                                    <select id="categories" name="categories" multiple class="form-select">
+                                    </select>
+                                </div>
                             </div>
                             <button type="submit" class="my-button btn rounded col-12">Register</button>
                         </form>
@@ -62,10 +67,47 @@
                 </div>
             </div>
         </main>
+        <script src="js/script.js"></script>
+
+        <!-- Load categories from the API and populate the select element -->
+        <script>
+            let optionCount = 0;
+
+            fetch("http://localhost:8000/api/categories/")
+            .then((response) => response.json())
+            .then((data) => {
+                const categoriesList = document.getElementById("categories");
+                categoriesList.setAttribute("size", Math.max(data.length, 7));
+                data.forEach((category) => {
+                    const option = document.createElement("option");
+                    option.value = category.name;
+                    option.textContent = category.name;
+                    categoriesList.appendChild(option);
+                });
+            })
+            .catch((error) => {
+                console.error("Error loading categories:", error);
+            });
+        </script>
+
+
         <script>
             const form = document.getElementById("login-form");
             form.addEventListener("submit", async (e) => {
             e.preventDefault();
+
+            const select = document.getElementById('categories');
+            const selected = Array.from(select.selectedOptions);
+
+            if (selected.length > 3) {
+                alert("You can select a maximum of 3 categories.");
+                return false;
+            }
+
+            if (selected.length < 1) {
+                alert("You must select at least one category.");
+                return false;
+            }
 
             const data = {
                 username: form.username.value,
@@ -73,7 +115,8 @@
                 password1: form.password1.value,
                 password2: form.password2.value,
                 first_name: form.first_name.value,
-                last_name: form.last_name.value
+                last_name: form.last_name.value,
+                favorite_categories: selected.map(option => option.value)
             };
 
             const response = await fetch("http://localhost:8000/api/auth/registration/", {
