--- a/user_polls.html
+++ b/user_polls.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="description" content="a" />
         <meta name="keywords" content="a" />
-        <title>Home</title>
+        <title>My polls</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
     </head>
@@ -36,14 +36,7 @@
             <div class="container mt-4">
                 <div class="row justify-content-center">
                     <div class="col-8 bg-light px-4 py-2 rounded">
-                        <h1>Poll list</h1>
-                        <div id="category-filter" class="mb-3">
-                            <label for="category-select">Filter by category:</label>
-                            <select id="category-select" class="form-select" onchange="loadPolls('content')">
-                                <option value="">All Categories</option>
-                                <!-- Categories will be dynamically inserted here -->
-                            </select>
-                        </div>
+                        <h1>My polls</h1>
                         <div id="content"></div>
                     </div>
                 </div>
@@ -52,8 +45,7 @@
         <script>
             window.onload = () => {
                 welcomeUser();
-                loadPolls("content");
-                loadCategories("category-select");
+                loadUserPolls("content");
             };
         </script>
         <script src="js/script.js"></script>
