--- a/create_poll.html
+++ b/create_poll.html
@@ -86,7 +86,7 @@
                     return;
                 }
 
-                const response = await fetch('http://localhost:8000/api/polls/', {
+                const response = await fetch(baseUrl + "api/polls/", {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
