--- a/login.html
+++ b/login.html
@@ -53,7 +53,7 @@
       const username = document.getElementById("username").value;
       const password = document.getElementById("password").value;
 
-      const response = await fetch("http://localhost:8000/api/auth/login/", {
+      const response = await fetch(baseUrl + "api/auth/login/", {
         method: "POST",
         headers: {
           "Content-Type": "application/json",
