--- a/login.html
+++ b/login.html
@@ -45,6 +45,7 @@
         </div>
       </div>
     </main>
+    <script src="js/script.js"></script>
     <script>
     const form = document.getElementById("login-form");
     form.addEventListener("submit", async (e) => {
