--- a/home.html
+++ b/home.html
@@ -2,8 +2,8 @@
 <html lang="it">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="s" />
-        <meta name="keywords" content="s" />
+        <meta name="description" content=" " />
+        <meta name="keywords" content=" " />
         <title>Home</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
