--- a/login.html
+++ b/login.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description"
-          content="Login page for accessing your account securely.">
+          content=" ">
     <meta name="keywords"
-          content="login, authentication, user, access, account">
+          content=" ">
     <title>Login</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
