--- a/manage_poll.html
+++ b/manage_poll.html
@@ -4,9 +4,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8" />
         <meta name="description"
-              content="Crea un nuovo sondaggio e aggiungi opzioni personalizzate.">
+              content=" ">
         <meta name="keywords"
-              content="sondaggio, poll, crea, opzioni, votazione, questionario">
+              content=" ">
         <title>Manage Poll</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
