--- a/poll_detail.html
+++ b/poll_detail.html
@@ -2,8 +2,8 @@
 <html lang="it">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="A" />
-        <meta name="keywords" content="A" />
+        <meta name="description" content=" " />
+        <meta name="keywords" content=" " />
         <title>Poll details</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
