--- a/reg.html
+++ b/reg.html
@@ -2,8 +2,8 @@
 <html lang="it">
     <head>
         <meta charset="UTF-8">
-        <meta name="description" content="">
-        <meta name="keywords" content="">
+        <meta name="description" content=" ">
+        <meta name="keywords" content=" ">
         <title>Registration</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -73,7 +73,7 @@
         <script>
             let optionCount = 0;
 
-            fetch(baseUrl + "api/categories/")
+            fetch(baseUrl + "api/polls/categories/")
             .then((response) => response.json())
             .then((data) => {
                 const categoriesList = document.getElementById("categories");
