--- a/user_polls.html
+++ b/user_polls.html
@@ -2,8 +2,8 @@
 <html lang="it">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="a" />
-        <meta name="keywords" content="a" />
+        <meta name="description" content=" " />
+        <meta name="keywords" content=" " />
         <title>My polls</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
