--- a/poll_list.html
+++ b/poll_list.html
@@ -2,9 +2,9 @@
 <html lang="it">
     <head>
         <meta charset="UTF-8" />
-        <meta name="description" content="a" />
-        <meta name="keywords" content="a" />
-        <title>Home</title>
+        <meta name="description" content=" " />
+        <meta name="keywords" content=" " />
+        <title>Poll list</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
     </head>
