--- a/manage_poll.html
+++ b/manage_poll.html
@@ -82,7 +82,7 @@
                     return;
                 }
 
-                fetch(baseUrl + "api/polls/"+pollId+"}/", {
+                fetch(baseUrl + "api/polls/"+pollId+"/", {
                     headers: {
                         'Authorization': `Token ${token}`
                     }
