--- a/login.html
+++ b/login.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <meta name="description"
-          content=" ">
+          content="Login page for accessing your account securely.">
     <meta name="keywords"
-          content=" ">
+          content="login, authentication, user, access, account">
     <title>Login</title>
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -40,13 +40,14 @@
                 Not registered yet? <a class="my-button btn rounded px-2 py-0" href="reg.html">Signup</a>
               </p>
             </div>
-            <p id="result"></p>
           </div>
         </div>
       </div>
     </main>
-    <script src="js/script.js"></script>
+    <script src = "js/script.js"></script>
     <script>
+
+
     const form = document.getElementById("login-form");
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
@@ -62,8 +63,6 @@
         body: JSON.stringify({ username, password }),
       });
 
-      const result = document.getElementById("result");
-
       if (response.ok) {
         const data = await response.json();
         localStorage.setItem("token", data.key);
@@ -72,7 +71,8 @@
         window.location.href = redirectTo;
       } else {
         const error = await response.json();
-        result.innerText = `Errore: ${JSON.stringify(error)}`;
+        alert("The username or password is incorrect.");
+        
       }
     });
     </script>
