--- a/manage_poll.html
+++ b/manage_poll.html
@@ -4,9 +4,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta charset="UTF-8" />
         <meta name="description"
-              content=" ">
+              content="Crea un nuovo sondaggio e aggiungi opzioni personalizzate.">
         <meta name="keywords"
-              content=" ">
+              content="sondaggio, poll, crea, opzioni, votazione, questionario">
         <title>Manage Poll</title>
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="css/bootstrap.min.css" />
@@ -14,7 +14,7 @@
     <body>
         <header>
             <nav class="navbar navbar-light bg-light d-flex justify-content-between px-4">
-                <ul class="d-flex justify-content-around list-unstyled col-9 align-items-center mb-0">
+                <ul class="d-flex justify-content-around list-unstyled col-8 align-items-center mb-0">
                     <li>
                         <a class="text-decoration-none" href="home.html">Home</a>
                     </li>
@@ -30,7 +30,10 @@
                 </ul>
                 <div id="user" class="d-flex align-items-center">
                     <span id="welcome-message" class="px-2">Loading...</span>
-                    <button id="authenticated" onclick="logout()" hidden class="btn border-secondary px-2 py-0">Logout</button>
+                    <button onclick="logout()" class="btn border-secondary px-2 py-0 authenticated-only me-2" hidden>Logout</button>
+                    <button id="profile-button" class="btn border-secondary px-2 py-0 authenticated-only" hidden>
+                        <a href="manage_profile.html" class="text-decoration-none text-black">Manage Profile</a>
+                    </button>
                     <button id="unauthenticated" onclick="login()" hidden class="btn border-secondary px-2 py-0">Login</button>
                 </div>
             </nav>
@@ -82,7 +85,7 @@
                     return;
                 }
 
-                fetch(baseUrl + "api/polls/"+pollId+"/", {
+                fetch(baseUrl + "api/polls/" + pollId +"/", {
                     headers: {
                         'Authorization': `Token ${token}`
                     }
