--- a/create_poll.html
+++ b/create_poll.html
@@ -44,21 +44,21 @@
                     <div class="col-8 bg-light px-4 py-2 rounded">
                         <form id="pollForm">
                             <div class="mb-3">
-                                <label for="question" class="form-label">Domanda</label>
+                                <label for="question" class="form-label">Question</label>
                                 <input type="text" class="form-control" id="question" required>
                             </div>
                             <div class="mb-3">
-                                <label class="form-label">Opzioni</label>
+                                <label class="form-label">Choices</label>
                                 <div id="optionsContainer"></div>
-                                <button type="button" class="btn btn-secondary mt-2" onclick="addOption()">Aggiungi opzione</button>
+                                <button type="button" class="btn btn-secondary mt-2" onclick="addOption()">Add new choice</button>
                             </div>
                             <div class="mb-3">
-                                <label for="category" class="form-label">Categoria</label>
+                                <label for="category" class="form-label">Category</label>
                                 <select class="form-select" id="categories-list" required>
-                                    <option value="" disabled selected>Seleziona una categoria</option>
+                                    <option value="" disabled selected>Select a category</option>
                                 </select>
                             </div>
-                            <button type="submit" class="btn btn-primary">Crea sondaggio</button>
+                            <button type="submit" class="btn btn-primary">Create new poll</button>
                         </form>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                 const category = document.getElementById('categories-list').value;
 
                 if (choices.length < 2) {
-                    alert("Inserisci almeno due opzioni.");
+                    alert("Insert at least two choices.");
                     return;
                 }
 
@@ -103,11 +103,11 @@
                 });
 
                 if (response.ok) {
-                    alert("Sondaggio creato con successo!");
+                    alert("Poll created succesfully!");
                     window.location.href = "poll_list.html";  // o altra pagina
                 } else {
                     const errorData = await response.json();
-                    alert("Errore nella creazione del sondaggio: " + JSON.stringify(errorData));
+                    alert("Error in poll creation: " + JSON.stringify(errorData));
                 }
             });
         </script>
